--- a/chef-repo/Gateway01/Vagrantfile
+++ b/chef-repo/Gateway01/Vagrantfile
@@ -5,11 +5,11 @@ GATEWAY = exec 'netstat -rn | grep 192.168 | grep default | tr -s " " | cut -d" 
 
 app_vm_name = "devops-Gateway"
 app_name = "gateway"
-app_ip = "192.168.254.249"
-app_netmask = "255.255.255.248"
+app_ip = "192.168.1.1"
+app_netmask = "255.255.255.0"
 
-Vagrant.configure(2) do |conf|
-  conf.vm.box = "jubianchi/debian-wheezy-chef-i386"
+Vagrant.configure("2") do |config|
+  config.vm.box = "debian/stretch64"
 
   conf.vm.define app_name
   conf.vm.provider :virtualbox do |vb|
