--- a/chef-repo/Web01/Vagrantfile
+++ b/chef-repo/Web01/Vagrantfile
@@ -2,15 +2,15 @@
 # vi: set ft=ruby :
 
 
-app_vm_name = "Web1"
-app_name = "Web1"
+app_vm_name = "Web01"
+app_name = "Web01"
 app_ip = "192.168.1.2"
 app_netmask = "255.255.255.0"
 app_ip_gateway = "192.168.1.1
 app_docroot = "./web1_docroot"
 
-Vagrant.configure(2) do |conf|
-  conf.vm.box = "jubianchi/debian-wheezy-chef-i386"
+Vagrant.configure("2") do |config|
+  config.vm.box = "debian/stretch64"
 
   conf.vm.define app_name
   conf.vm.provider :virtualbox do |vb|
