--- a/Proxy/Vagrantfile
+++ b/Proxy/Vagrantfile
@@ -1,16 +1,14 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-
-app_vm_name = "Web01"
-app_name = "Web01"
-app_ip = "192.168.1.2"
+app_vm_name = "Proxy"
+app_name = "Proxy"
+app_ip = "192.168.1.4"
 app_netmask = "255.255.255.0"
 app_ip_gateway = "192.168.1.1
-app_docroot = "./web1_docroot"
 
-Vagrant.configure("2") do |config|
-  config.vm.box = "debian/stretch64"
+Vagrant.configure("2") do |conf|
+  conf.vm.box = "debian/stretch64"
 
   conf.vm.define app_name
   conf.vm.provider :virtualbox do |vb|
@@ -18,9 +16,8 @@ Vagrant.configure("2") do |config|
   end
 
   conf.vm.hostname = app_name
-  conf.vm.synced_folder app_docroot, "/var/www", :mount_options => ["dmode=777", "fmode=666"]
-
   conf.vm.network "private_network", ip: app_ip, netmask: app_netmask
+  conf.vm.network "forwarded_port", guest: 80, host: 8042
 
   conf.vm.provision "chef_solo" do |chef|
     chef.cookbooks_path = "../chef-repo/cookbooks"
@@ -30,6 +27,8 @@ Vagrant.configure("2") do |config|
         :ip_gateway => app_ip_gateway
       }
     }
-    chef.add_role("web-server")
+    chef.add_recipe "nginx"
+    chef.add_recipe "default-route"
+    chef.add_role("load-balancing")
   end
 end
