--- a/Web02/Vagrantfile
+++ b/Web02/Vagrantfile
@@ -6,11 +6,11 @@ app_vm_name = "Web02"
 app_name = "Web02"
 app_ip = "192.168.1.3"
 app_netmask = "255.255.255.0"
-app_ip_gateway = "192.168.1.1
+app_ip_gateway = "192.168.1.1"
 app_docroot = "./web1_docroot"
 
-Vagrant.configure("2") do |config|
-  config.vm.box = "debian/stretch64"
+Vagrant.configure("2") do |conf|
+  conf.vm.box = "debian/stretch64"
 
   conf.vm.define app_name
   conf.vm.provider :virtualbox do |vb|
