--- a/Proxy/Vagrantfile
+++ b/Proxy/Vagrantfile
@@ -5,17 +5,19 @@ app_vm_name = "Proxy"
 app_name = "Proxy"
 app_ip = "192.168.1.4"
 app_netmask = "255.255.255.0"
-app_ip_gateway = "192.168.1.1
+app_ip_gateway = "192.168.1.1"
 
 Vagrant.configure("2") do |conf|
-  conf.vm.box = "debian/stretch64"
 
-  conf.vm.define app_name
+conf.vm.box = "debian/stretch64"
+
+conf.vm.define app_name
   conf.vm.provider :virtualbox do |vb|
     vb.name = app_vm_name
   end
 
   conf.vm.hostname = app_name
+  
   conf.vm.network "private_network", ip: app_ip, netmask: app_netmask
   conf.vm.network "forwarded_port", guest: 80, host: 8042
 
