--- a/Web01/Vagrantfile
+++ b/Web01/Vagrantfile
@@ -6,7 +6,7 @@ app_name = "Web01"
 app_ip = "192.168.1.2"
 app_netmask = "255.255.255.0"
 app_ip_gateway = "192.168.1.1"
-app_docroot = "./docroot"
+app_docroot = "./Web01_docroot"
 
 Vagrant.configure("2") do |conf|
 
@@ -18,7 +18,8 @@ conf.vm.define app_name
   end
 
 conf.vm.hostname = app_name
-  conf.vm.synced_folder "Web01_docroot", "/var/www", :mount_options => ["dmode=777", "fmode=666"]
+  conf.vm.synced_folder app_docroot, "/var/www", :mount_options => ["dmode=777", "fmode=666"]
+  conf.vbguest.installer_arguments = ['--nox11', '-- --do']
 
   conf.vm.network "private_network", ip: app_ip, netmask: app_netmask
 
